# pyghtml

./: .gitignore  README.md  example.html  example.py  pyghtml.py  pyproject.toml  test.py
pyghtml/: __init__.py  attributes.py  html_attributes.py  html_tags.py  tags.py  utils.py
