[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyghtml"
version = "1.3.1"
authors = [{ name = "Artem Shush", email = "shushtain@gmail.com" }]
description = "Python-Generatable HTML."
keywords = ["html", "python", "static pages", "generator", "OOP"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = []

[project.urls]
Homepage = "https://github.com/shushtain/pyghtml"
Issues = "https://github.com/shushtain/pyghtml/issues"
